; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_depth_filter_editor.c_absent_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_depth_filter_editor.c_absent_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.node_baton = type { i32, i32, %struct.edit_baton* }
%struct.edit_baton = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (i8*, i32, i32*)* }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i32*)* @absent_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @absent_file(i8* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.node_baton*, align 8
  %8 = alloca %struct.edit_baton*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.node_baton*
  store %struct.node_baton* %10, %struct.node_baton** %7, align 8
  %11 = load %struct.node_baton*, %struct.node_baton** %7, align 8
  %12 = getelementptr inbounds %struct.node_baton, %struct.node_baton* %11, i32 0, i32 2
  %13 = load %struct.edit_baton*, %struct.edit_baton** %12, align 8
  store %struct.edit_baton* %13, %struct.edit_baton** %8, align 8
  %14 = load %struct.node_baton*, %struct.node_baton** %7, align 8
  %15 = getelementptr inbounds %struct.node_baton, %struct.node_baton* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %31, label %18

18:                                               ; preds = %3
  %19 = load %struct.edit_baton*, %struct.edit_baton** %8, align 8
  %20 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32 (i8*, i32, i32*)*, i32 (i8*, i32, i32*)** %22, align 8
  %24 = load i8*, i8** %4, align 8
  %25 = load %struct.node_baton*, %struct.node_baton** %7, align 8
  %26 = getelementptr inbounds %struct.node_baton, %struct.node_baton* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = call i32 %23(i8* %24, i32 %27, i32* %28)
  %30 = call i32 @SVN_ERR(i32 %29)
  br label %31

31:                                               ; preds = %18, %3
  %32 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %32
}

declare dso_local i32 @SVN_ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
